Created images and profile

--- a/profile.html
+++ b/profile.html
@@ -3,9 +3,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>graceyangwashere</h1>
+        <h1>Profile</h1>
          <h2>graceyangwashere</h2>
-         <a href="profile.html">Profile</a>
-         <a href="images.html">Images</a>
+         <a href="index.html">graceyangwashere</a>
+         <img src="eraser.png">
     </body>
 </html>
